--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,4 +1,4 @@
-main.disclaimer=This is an example project using Java, Spring Framework, and JPA repositories with Sitemesh decorator, jQuery and Twitter bootstrap.
+main.disclaimer=This is an example project using Java, Spring Framework, and Hibernate with Sitemesh decorator, jQuery and Twitter bootstrap.
 main.nav.overview=Overview
 main.nav.departments=Departments
 main.nav.employees=Employees
