replaced unnecessary tabs with =

--- a/src/main/resources/i18n/messages_fi.properties
+++ b/src/main/resources/i18n/messages_fi.properties
@@ -1,7 +1,7 @@
-main.disclaimer         Tämä on Javaa, Spring ohjelmistokehystä ja Hibernatea hyödyntävä esimerkkiprojekti käyttäen Sitemesh kuorruttajaa, jQueryä ja Twitter bootstrapiä.
-main.nav.overview       Katsaus
-main.nav.departments    Osastot
-main.nav.employees      Työntekijät
+main.disclaimer=Tämä on Javaa, Spring ohjelmistokehystä ja Hibernatea hyödyntävä esimerkkiprojekti käyttäen Sitemesh kuorruttajaa, jQueryä ja Twitter bootstrapiä.
+main.nav.overview=Katsaus
+main.nav.departments=Osastot
+main.nav.employees=Työntekijät
 
 overview.title=Katsaus
 overview.total=Yhteensä {0} osastoa, joissa {1} työntekijää
