improved messages, removed unnecessary convenience method

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -37,11 +37,11 @@ employees.table.email=Email
 employees.table.department=Department
 employees.table.contractBeginDate=Since
 employees.table.municipality=Municipality
-employees.modal.header=Delete {0} employee
-employees.modal.body=Are you sure you want to delete {0} employee?
+employees.modal.header=Delete {0}, {1} employee
+employees.modal.body=Are you sure you want to delete {0}, {1} employee?
 
-employees.add.success=Employee {0} added
-employees.add.error=Error while adding employee {0}
+employees.add.success=Employee {0}, {1} added
+employees.add.error=Error while adding employee {0}, {1}
 employees.delete.success=Employee {0} deleted
 employees.delete.error=Error while deleting {0} employee
 employees.change.success=Employee {0} changed to {1} department
