--- a/src/main/resources/i18n/messages_fi.properties
+++ b/src/main/resources/i18n/messages_fi.properties
@@ -37,11 +37,11 @@ employees.table.email=Sähköposti
 employees.table.department=Osasto
 employees.table.contractBeginDate=Alkaen
 employees.table.municipality=Kunta
-employees.modal.header=Poista {0} työntekijä
-employees.modal.body=Haluatko varmasti poistaa {0} työntekijän?
+employees.modal.header=Poista {0}, {1} työntekijä
+employees.modal.body=Haluatko varmasti poistaa {0}, {1} työntekijän?
 
-employees.add.success=Työntekijä {0} lisätty
-employees.add.error=Virhe lisättäessä työntekijä {0}
+employees.add.success=Työntekijä {0}, {1} lisätty
+employees.add.error=Virhe lisättäessä työntekijä {0}, {1}
 employees.delete.success=Työntekijä {0} poistettu
 employees.delete.error=Virhe poistettaessa {0} Työntekijä
 employees.change.success=Työntekijä {0} vaihdettu {1} osastolle
