default encoding to utf-8, fixed json encoding problems with ajax calls

--- a/src/main/resources/i18n/exceptions_fi.properties
+++ b/src/main/resources/i18n/exceptions_fi.properties
@@ -1,14 +1,14 @@
-NotNull=Ei voi olla tyhj‰
-NotNull.employee.contractBeginDate=Sopimuksen aloitusp‰iv‰ ei voi olla tyhj‰, tai se on annettu v‰‰r‰ss‰ muodossa
+NotNull=Ei voi olla tyhj√§
+NotNull.employee.contractBeginDate=Sopimuksen aloitusp√§iv√§ ei voi olla tyhj√§, tai se on annettu v√§√§r√§ss√§ muodossa
 
-NotEmpty=Ei voi olla tyhj‰
-NotEmpty.employee.firstName=Etunimi ei voi olla tyhj‰
-NotEmpty.employee.lastName=Sukunimi ei voi olla tyhj‰
-NotEmpty.employee.email=S‰hkˆpostiosoite ei voi olla tyhj‰
-NotEmpty.employee.municipalityName=Kunta ei voi olla tyhj‰
-NotNull.employee.municipalityId=Huom! Kunta t‰ytyy valita listasta
-NotEmpty.department.name=Nimi ei voi olla tyhj‰
+NotEmpty=Ei voi olla tyhj√§
+NotEmpty.employee.firstName=Etunimi ei voi olla tyhj√§
+NotEmpty.employee.lastName=Sukunimi ei voi olla tyhj√§
+NotEmpty.employee.email=S√§hk√∂postiosoite ei voi olla tyhj√§
+NotEmpty.employee.municipalityName=Kunta ei voi olla tyhj√§
+NotNull.employee.municipalityId=Huom! Kunta t√§ytyy valita listasta
+NotEmpty.department.name=Nimi ei voi olla tyhj√§
 
 
-Email=V‰‰rin muodostettu s‰hkˆpostiosoite
-Email.employee.email=S‰hkˆpostiosoite ei ole muodostettu oikein
+Email=V√§√§rin muodostettu s√§hk√∂postiosoite
+Email.employee.email=S√§hk√∂postiosoite ei ole muodostettu oikein
