--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -2,6 +2,8 @@ main.disclaimer=This is an example project using Java, Spring Framework, and Hib
 main.nav.overview=Overview
 main.nav.departments=Departments
 main.nav.employees=Employees
+main.nav.language=Suomeksi
+main.nav.language.locale=fi
 
 overview.title=Overview
 overview.total=Total of {0} Departments with {1} Employees
