--- a/src/main/resources/i18n/messages_fi.properties
+++ b/src/main/resources/i18n/messages_fi.properties
@@ -1,51 +1,53 @@
-main.disclaimer=Tämä on Javaa, Spring ohjelmistokehystä ja Hibernatea hyödyntävä esimerkkiprojekti käyttäen Sitemesh kuorruttajaa, jQueryä ja Twitter bootstrapiä.
+main.disclaimer=TÃ¤mÃ¤ on GroovyÃ¤ ja Grails ohjelmistokehystÃ¤ hyÃ¶dyntÃ¤vÃ¤ esimerkkiprojekti kÃ¤yttÃ¤en Sitemesh kuorruttajaa, jQueryÃ¤ ja Twitter bootstrapiÃ¤.
 main.nav.overview=Katsaus
 main.nav.departments=Osastot
-main.nav.employees=Työntekijät
+main.nav.employees=TyÃ¶ntekijÃ¤t
+main.nav.language=In English
+main.nav.language.locale=en
 
 overview.title=Katsaus
-overview.total=Yhteensä {0} osastoa, joissa {1} työntekijää
+overview.total=YhteensÃ¤ {0} osastoa, joissa {1} tyÃ¶ntekijÃ¤Ã¤
 overview.empty.departments=Ei osastoja
-overview.empty.employees=Ei työntekijöitä
+overview.empty.employees=Ei tyÃ¶ntekijÃ¶itÃ¤
 
 departments.title=Osastot
 departments.form.name=Nimi
-departments.form.submit=Lisää osasto
+departments.form.submit=LisÃ¤Ã¤ osasto
 departments.table.id=Id
 departments.table.name=Nimi
 departments.modal.header=Poista {0} osasto
 departments.modal.body=Haluatko varmasti poistaa {0} osaston?
 
-departments.add.success=Osasto {0} lisätty
-departments.add.error=Virhe lisättäessä osastoa {0}
+departments.add.success=Osasto {0} lisÃ¤tty
+departments.add.error=Virhe lisÃ¤ttÃ¤essÃ¤ osastoa {0}
 departments.delete.success=Osasto {0} poistettu
 departments.delete.error=Virhe poistettaessa {0} osastoa
-departments.delete.info=Osastoa, jossa on työntekijöitä, ei voida poistaa
+departments.delete.info=Osastoa, jossa on tyÃ¶ntekijÃ¶itÃ¤, ei voida poistaa
 
-employees.title=Työntekijät
-employees.empty.departments=Työntekijä tarvitsee <a href="/departments/">osaston</a>.
+employees.title=TyÃ¶ntekijÃ¤t
+employees.empty.departments=TyÃ¶ntekijÃ¤ tarvitsee <a href="/departments/">osaston</a>.
 employees.form.firstName=Etunimi
 employees.form.lastName=Sukunimi
-employees.form.email=Sähköposti
+employees.form.email=SÃ¤hkÃ¶posti
 employees.form.department=Osasto
-employees.form.contractBeginDate=Sopimuksen aloituspäivä
+employees.form.contractBeginDate=Sopimuksen aloituspÃ¤ivÃ¤
 employees.form.municipalityId=Kunta
-employees.form.submit=Lisää työntekijä
+employees.form.submit=LisÃ¤Ã¤ tyÃ¶ntekijÃ¤
 employees.table.id=Id
 employees.table.name=Nimi
-employees.table.email=Sähköposti
+employees.table.email=SÃ¤hkÃ¶posti
 employees.table.department=Osasto
 employees.table.contractBeginDate=Alkaen
 employees.table.municipality=Kunta
-employees.modal.header=Poista {0}, {1} työntekijä
-employees.modal.body=Haluatko varmasti poistaa {0}, {1} työntekijän?
+employees.modal.header=Poista {0}, {1} tyÃ¶ntekijÃ¤
+employees.modal.body=Haluatko varmasti poistaa {0}, {1} tyÃ¶ntekijÃ¤n?
 
-employees.add.success=Työntekijä {0}, {1} lisätty
-employees.add.error=Virhe lisättäessä työntekijä {0}, {1}
-employees.delete.success=Työntekijä {0} poistettu
-employees.delete.error=Virhe poistettaessa {0} Työntekijä
-employees.change.success=Työntekijä {0} vaihdettu {1} osastolle
-employees.change.error=Virhe vaihdettaessa työntekijää {0} osastolle {1}
+employees.add.success=TyÃ¶ntekijÃ¤ {0}, {1} lisÃ¤tty
+employees.add.error=Virhe lisÃ¤ttÃ¤essÃ¤ tyÃ¶ntekijÃ¤ {0}, {1}
+employees.delete.success=TyÃ¶ntekijÃ¤ {0} poistettu
+employees.delete.error=Virhe poistettaessa {0} TyÃ¶ntekijÃ¤
+employees.change.success=TyÃ¶ntekijÃ¤ {0} vaihdettu {1} osastolle
+employees.change.error=Virhe vaihdettaessa tyÃ¶ntekijÃ¤Ã¤ {0} osastolle {1}
 
 common.nbsp=&nbsp;
 common.delete=Poista
