fixed finnish disclaimer

--- a/src/main/resources/i18n/messages_fi.properties
+++ b/src/main/resources/i18n/messages_fi.properties
@@ -1,4 +1,4 @@
-main.disclaimer=Tämä on Groovyä ja Grails ohjelmistokehystä hyödyntävä esimerkkiprojekti käyttäen Sitemesh kuorruttajaa, jQueryä ja Twitter bootstrapiä.
+main.disclaimer=Tämä on Javaa, Spring ohjelmistokehystä ja Hibernatea hyödyntävä esimerkkiprojekti käyttäen Sitemesh kuorruttajaa, jQueryä ja Twitter bootstrapiä.
 main.nav.overview=Katsaus
 main.nav.departments=Osastot
 main.nav.employees=Työntekijät
