added domain object Hibernate validation + changed @NotEmpty -> @NotBlank

--- a/src/main/resources/i18n/exceptions_fi.properties
+++ b/src/main/resources/i18n/exceptions_fi.properties
@@ -1,13 +1,13 @@
 NotNull=Ei voi olla tyhjä
 NotNull.employee.contractBeginDate=Sopimuksen aloituspäivä ei voi olla tyhjä, tai se on annettu väärässä muodossa
 
-NotEmpty=Ei voi olla tyhjä
-NotEmpty.employee.firstName=Etunimi ei voi olla tyhjä
-NotEmpty.employee.lastName=Sukunimi ei voi olla tyhjä
-NotEmpty.employee.email=Sähköpostiosoite ei voi olla tyhjä
-NotEmpty.employee.municipalityName=Kunta ei voi olla tyhjä
+NotBlank=Ei voi olla tyhjä
+NotBlank.employee.firstName=Etunimi ei voi olla tyhjä
+NotBlank.employee.lastName=Sukunimi ei voi olla tyhjä
+NotBlank.employee.email=Sähköpostiosoite ei voi olla tyhjä
+NotBlank.employee.municipalityName=Kunta ei voi olla tyhjä
 NotNull.employee.municipalityId=Huom! Kunta täytyy valita listasta
-NotEmpty.department.name=Nimi ei voi olla tyhjä
+NotBlank.department.name=Nimi ei voi olla tyhjä
 
 
 Email=Väärin muodostettu sähköpostiosoite
